# edu_vibecoding_mvp01

./: .env.example  .gitignore  1st_prompt.txt  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_payloads.json
app/: __init__.py  config.py  database.py  deduplication.py  emailer.py  logging_config.py  main.py  models.py
docs/: changelog.md  manual_requests.md  report.md  roadmap.md  technical_overview.md
openspec/: project.md
openspec/changes/001-lead-webhook-mvp/: design.md  proposal.md  tasks.md
tests/: test_lead_api.py
